src/test/deca/context/valid/while.deca
// Description:
//    While
//
// Resultats:
//    ok
//
// Historique:
//    cree le 06/01/2023

{
        int x = 1;
        while(x == 1){
                x=x+1;
        }
        
}