src/test/deca/context/invalid/declare-null.deca
// Description:
//    Condition de la règle 3.42 non respectée 
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 13: An assignation between a int and a null is not possible (rule 3.32)
//
// Historique:
//    cree le 16/01/2023


{
    int a = null;
}
